# synmerco-crewai

./: README.md  pyproject.toml
synmerco_crewai/: __init__.py  _client.py  _factory.py  _mcp_adapter.py  _registry.py
tests/: test_tools.py
