[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synmerco-crewai"
version = "1.0.0"
description = "46 CrewAI tools for AI agent commerce."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Synmerco LLC", email = "joelasota@hotmail.com"}]
keywords = ["crewai","ai-agent","escrow","reputation","trust","synmerco"]
classifiers = ["Development Status :: 5 - Production/Stable","License :: OSI Approved :: MIT License","Programming Language :: Python :: 3"]
dependencies = ["httpx>=0.25.0","pydantic>=2.0.0"]

[project.urls]
Homepage = "https://synmerco.com"
Repository = "https://github.com/synmerco/integration"

[project.optional-dependencies]
crewai = ["crewai>=0.80.0","crewai-tools>=0.14.0"]
mcp = ["crewai-tools[mcp]"]
dev = ["pytest>=8.0","pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["synmerco_crewai"]
